@@ -6,12 +6,13 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public class CustomUserDetail implements UserDetails {
 
     private boolean accountNonLocked;
     private boolean enabled;
-    private com.SportAcademy.Model.UserDetails user;
+    private final com.SportAcademy.Model.UserDetails user;
 
     public CustomUserDetail(com.SportAcademy.Model.UserDetails user) {
         this.user = user;
@@ -20,7 +21,7 @@ public class CustomUserDetail implements UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         SimpleGrantedAuthority simpleGrantedAuthority = new SimpleGrantedAuthority(user.getRole());
-        return Arrays.asList(simpleGrantedAuthority);
+        return List.of(simpleGrantedAuthority);
     }
 
     @Override
